--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,12 +1,11 @@
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  # 计划更新 (每天UTC时间0点，即北京时间8点运行)
-  schedule: [{cron: "0 0 * * *"}]
-  # 允许手动触发工作流
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  # 推送到 main 分支时也运行
-  push: {branches: ["main"]}
-
+  push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -15,26 +14,18 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # 你的 GitHub token
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # 选项 - 根据你的需求配置
+          # Options
           user: zxidd24
           template: classic
           base: header, activity, community, repositories, metadata
-          base.indepth: false
-          base.hireable: false
-          base.skip: false
           config_timezone: Asia/Shanghai
-
-          # 输出设置：生成 metrics.svg 文件
-          output: metrics.svg
-          
-      # 额外的步骤：自动提交生成的 SVG 文件
-      - name: Commit and push metrics
-        run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add metrics.svg
-          git commit -m "Update metrics" || echo "No changes to commit"
-          git push
