--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,14 +2,21 @@ name: generate-snake
 
 on:
   schedule:
-    - cron: "0 0 * * 1"    # 每周一 00:00 UTC 自动更新
-  workflow_dispatch:       # 允许手动触发
+    - cron: "0 0 * * 1"   # 每周一次
+  workflow_dispatch:
+
+permissions:
+  contents: write         # 允许提交代码
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
 
       - name: Generate snake SVG
         uses: Platane/snk@v3
@@ -23,6 +30,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add dist
+          git add -A
           git commit -m "chore: update snake" || echo "no changes"
+          git pull --rebase
           git push
